crates/jsonschema-codegen/tests/ui/invalid_property_names_type.stderr
error: 42 is not of types "boolean", "object"
 --> tests/ui/invalid_property_names_type.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"propertyNames":42}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
