crates/jsonschema-codegen/tests/ui/invalid_property_names_type.rs
#[jsonschema::validator(schema = r#"{"propertyNames":42}"#)]
struct InvalidPropertyNamesTypeValidator;

fn main() {}
